updated title and image size on list of all directors page

--- a/app/views/director_templates/list.html.erb
+++ b/app/views/director_templates/list.html.erb
@@ -1,4 +1,6 @@
-<h1> List of directors </h1>
+<h1> List of all directors </h1>
+
+<hr>
 
 <table border="1">
   <tr>
@@ -13,7 +15,7 @@
   <tr>
     <td> <%= a_director.id %> </td>
     <td> 
-      <img src="<%= a_director.image %>" width="100">
+      <img src="<%= a_director.image %>" width="250">
     </td>
     <td> <%= a_director.name %> </td>
     <td> <%= a_director.dob %> </td>
