--- a/app/views/movies_templates/list.html.erb
+++ b/app/views/movies_templates/list.html.erb
@@ -11,7 +11,21 @@
     <th></th>
   </tr>
 
+  <% Movie.all.each do |a_movie|%>
   <tr>
+    <td> <%= a_movie.id %> </td>
+    <td> 
+      <img src="<%= a_movie.image%>" width="250">
+    </td>
+    <td> <%= a_movie.title %> </td>
+    <td> <%= a_movie.year %> </td>
+    <% Director.all.each do |a_director| %>
+      <% if a_director.id == a_movie.director_id %>
+    <td> <%= a_director.name %> </td>
+      <% end %>
+    <% end%>
+    <td> <a href="#"> Show details </a> </td>
+  <% end %>
   </tr>
 
 </table>
