--- a/app/views/movies_templates/list.html.erb
+++ b/app/views/movies_templates/list.html.erb
@@ -24,7 +24,7 @@
     <td> <%= a_director.name %> </td>
       <% end %>
     <% end%>
-    <td> <a href="#"> Show details </a> </td>
+    <td> <a href="/movies/<%= a_movie.id %>"> Show details </a> </td>
   <% end %>
   </tr>
 
