--- a/app/views/director_templates/details.html.erb
+++ b/app/views/director_templates/details.html.erb
@@ -7,17 +7,22 @@
 <dl>
   <dt> Name </dt>
   <dd> <%= @the_director.name %> </dd>
+
   <dt> Dob </dt>
   <dd><%= @the_director.dob %></dd>
+
   <dt> Bio </dt>
   <dd> <%= @the_director.bio %> </dd>
+
   <dt> Image </dt>
   <dd> 
     <img src="<%= @the_director.image %>" width="250px">
     
   </dd>
+
   <dt> Created at </dt>
   <dd> <%= @the_director.created_at %> </dd>
+
   <dt> Updated at </dt>
   <dd> <%= @the_director.updated_at %> </dd>
 </dl>
@@ -26,6 +31,7 @@
 
 <h2> Filmography </h2>
 
+<% matching_movies = Movie.where ({ :director_id => @the_director.id})%>
 <table border="1">
   <tr>
     <th> ID </th>
@@ -35,13 +41,20 @@
     <th> Director</th>
     <th></th>
   </tr>
+
+  <% matching_movies.each do |a_movie|%>
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><%= a_movie.id %></td>
+    <td>
+      <img src="<%= a_movie.image %>" width="50">
+    </td>
+    <td><%= a_movie.title %></td>
+    <td><%= a_movie.year %></td>
+    <td><%=@the_director.name %></td>
+    <td>
+      <a href="/movies/<%= a_movie.id%>"> Show Details </a>
+    </td>
   </tr>
+<% end %>
 
 </table>
