--- a/app/views/actor_templates/details.html.erb
+++ b/app/views/actor_templates/details.html.erb
@@ -2,3 +2,27 @@
 
 <a href="/actors"> Go back </a>
 <hr>
+
+<dl>
+  <dt> Name </dt>
+  <dd> <%= @the_actor.name %> </dd>
+
+  <dt> Dob </dt>
+  <dd> <%= @the_actor.dob %> </dd>
+
+  <dt> Bio </dt>
+  <dd> <%= @the_actor.bio %> </dd>
+
+  <dt> Image </dt>
+  <dd><img src="<%=@the_actor.image%>" width="250px"></dd>
+
+  <dt> Created at </dt>
+  <dd> <%= @the_actor.created_at%> </dd>
+
+  <dt> Updated at </dt>
+  <dd> <%= @the_actor.updated_at %> </dd>
+</dl>
+
+<hr>
+
+<h2> Filmography </h2>
