--- a/app/views/actor_templates/details.html.erb
+++ b/app/views/actor_templates/details.html.erb
@@ -26,3 +26,37 @@
 <hr>
 
 <h2> Filmography </h2>
+
+<% matching_char = Character.where({ :actor_id => @the_actor.id })  %>
+<table border="1px">  
+  <tr>
+    <th> Title </th>
+    <th> Year </th>
+    <th> Director </th>
+    <th> Character name </th>
+    <th></th>
+  </tr>
+
+  <% matching_char.each do |a_character|%>
+  <tr>
+    <td> 
+      <% matching_movies = Movie.where({ :id => a_character.movie_id}) %>
+      <% the_movie = matching_movies.at(0) %>
+      <%= the_movie.title %> 
+    </td>
+    <td> <%= the_movie.year %> </td>
+    <td>
+      <% the_movie.director_id %> 
+      <% matching_director = Director.where({ :id => the_movie.director_id }) %>
+      <% the_director = matching_director.at(0) %> 
+      <%= the_director.name %>
+    </td>
+    <td> <%= a_character.name %> </td>
+    <td>
+      <a href="/movies/<%=the_movie.id%>"> Show details </a>
+    </td>
+  </tr>
+  <% end %>
+
+
+</table>
