updated spelling of Movie query

--- a/app/views/director_templates/details.html.erb
+++ b/app/views/director_templates/details.html.erb
@@ -31,8 +31,8 @@
 
 <h2> Filmography </h2>
 
-<% matching_movies = Movie.where ({ :director_id => @the_director.id})%>
-<table border="1">
+<% matching_movies = Movie.where({ :director_id => @the_director.id})%>
+<table border="1px">
   <tr>
     <th> ID </th>
     <th> Image </th>
