--- a/app/views/director_templates/eldest.html.erb
+++ b/app/views/director_templates/eldest.html.erb
@@ -1,1 +1,10 @@
 <h1> Eldest director </h1>
+
+<p> The eldest director in our dataset right now is 
+  <% sorted_director = Director.all.order({ :dob => :desc })%>
+  <% @director_old = sorted_director.last %>
+  <a href="/directors/<%= @director_old.id %>"> <%= @director_old.name %></a>,
+   born on <%= @director_old.dob.strftime("%B %w, %Y")%>. 
+</p>
+
+<p></p>
