--- a/app/views/director_templates/eldest.html.erb
+++ b/app/views/director_templates/eldest.html.erb
@@ -2,10 +2,9 @@
 
 <p>
   The eldest director in our dataset right now is 
-  <% sorted_director = Director.all.order({ :dob => :desc })%>
-  <% @director_old = sorted_director.last %>
+
   <a href="/directors/<%= @director_old.id %>"> <%= @director_old.name %></a>,
-   born on <%= @director_old.dob.strftime("%B %w, %Y")%>. 
+   born on <%= @director_bday %>. 
 </p>
 
 <p></p>
